Save audit logs to addressbook.json